# pineforge-data

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cpp/providers/: README.md
docker/: Dockerfile  entrypoint.py  server.Dockerfile
docs/: backtesting.md  data-model.md  getting-started.md  index.md  local-data.md  provider-contract.md  providers.md  releasing.md  server.md
docs/api/: backtesting.md  index.md  models.md  providers.md  requests.md  server.md  streaming.md
docs/providers/: ccxt.md  csv.md  sqlalchemy.md  sqlite.md  tabular-schema.md
scripts/: backtest.py  bump_version.py  run_database_e2e.sh  verify_release.py
src/pineforge_data/: __init__.py  backtest.py  compile_cache.py  docker_runtime.py  engine.py  errors.py  models.py  release_contract.py  requests.py  server.py  server_client.py
src/pineforge_data/cli/: __init__.py  backtest.py
src/pineforge_data/providers/: __init__.py  base.py  ccxt.py  local.py  registry.py  sqlalchemy.py  tabular.py
tests/: test_backtest.py  test_ccxt.py  test_compile_cache.py  test_database_e2e.py  test_docker_integration.py  test_docker_runtime.py  test_documentation.py  test_engine.py  test_models.py  test_providers.py  test_release.py  test_release_contract.py  test_server.py  test_server_client.py  test_tabular_providers.py
tests/database/: docker-compose.yml
tests/fixtures/: CORPUS.md  corpus_ohlcv_ETH-USDT-USDT_1m_sample.csv  sma_cross.pine
