[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pineforge-data"
version = "0.1.0"
description = "Provider-neutral market and macro data adapters for PineForge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "PineForge contributors" }]
keywords = ["pinescript", "backtesting", "market-data", "macro-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
pineforge-backtest = "pineforge_data.cli.backtest:main"

[project.optional-dependencies]
ccxt = ["ccxt>=4.5.64,<5"]
dev = [
    "build>=1.2",
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/pineforge-4pass/pineforge-data"
Issues = "https://github.com/pineforge-4pass/pineforge-data/issues"
Source = "https://github.com/pineforge-4pass/pineforge-data"

[tool.hatch.build.targets.wheel]
packages = ["src/pineforge_data"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
extend-exclude = ["vendor"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pineforge_data"]
mypy_path = "src"
