[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pineforge-data"
version = "0.2.0"
description = "Provider-neutral market and macro data adapters for PineForge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "PineForge contributors" }]
keywords = ["pinescript", "backtesting", "market-data", "macro-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
pineforge-backtest = "pineforge_data.cli.backtest:main"
pineforge-backtest-server = "pineforge_data.server:main"

[project.optional-dependencies]
ccxt = ["ccxt>=4.5.64,<5"]
database = ["sqlalchemy>=2.0,<3"]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.7,<10",
    "mkdocstrings-python>=2.0,<3",
    "ruff>=0.8",
]
server = [
    "fastapi>=0.139,<0.140",
    "uvicorn>=0.51,<0.52",
]
release = [
    "build>=1.2,<2",
    "twine>=6.2,<7",
]
dev = [
    "build>=1.2",
    "fastapi>=0.139,<0.140",
    "httpx2>=2.5,<2.6",
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.51,<0.52",
]

[project.urls]
Homepage = "https://github.com/pineforge-4pass/pineforge-data"
Documentation = "https://pineforge-4pass.github.io/pineforge-data/"
Issues = "https://github.com/pineforge-4pass/pineforge-data/issues"
Source = "https://github.com/pineforge-4pass/pineforge-data"

[tool.hatch.build.targets.wheel]
packages = ["src/pineforge_data"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
extend-exclude = ["vendor"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pineforge_data"]
mypy_path = "src"
